syntax = "proto3";
package user;
option go_package = "./bp";

service UserService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool isSuccess = 1;
  int64 userId = 2;
  string username = 3;
  ErrorStatus error = 4;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  bool isSuccess = 1;
  int64 userId = 2;
  ErrorStatus error = 3;
}

message ErrorStatus {
  int32 errorCode = 1;
  string message = 2;
}
